# smart_home_automation_tool

./: .gitignore  LICENSE  README.md  mcp_client_runner.py
app/: constants.py  main.py
app/config/: database.py
app/controllers/: devices_state_controller.py  fan_controller.py  light_controller.py  thermostat_controller.py
app/models/: DeviceState.py  DeviceType.py  FanDevice.py  LightDevice.py  ThermostatDevice.py  table_models.py
app/services/: devices_repository.py
app/static/: ddl.sql  dml.sql
gradio_fe/: constants.py  main.py
gradio_fe/interfaces/: action_interface.py  devices_interface.py
gradio_fe/models/: DeviceState.py
gradio_fe/services/: gradio_service.py
mcp-client/: client.py  main.py  pyproject.toml  requirements.txt
mcp-server/: main.py  pyproject.toml
